# suedtirolmobilAI

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  install_and_run.sh  install_services.sh  openai.py  pyproject.toml  requests.py  requirements.txt  setup.cfg  start_bot.sh
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.well-known/: ai-plugin.json  openapi.yaml
docs/: Anleitung_chatgpt.md  EFA_XML_API.md  Wiki.md  ai-plugin.json  autostart.md
examples/: queries.txt
mcp/: __init__.py  server.py  types.py
prompts/: busdriver-template.formatter_prompt.txt  extract_search_parameters.txt  format_trip_response.txt  formatter_prompt.txt  parser_prompt.txt  princess-template.formatter_prompt.txt  sailor-template.formatter_prompt.txt
src/: __init__.py  ai_agent.py  chat.py  chat_loop.py  chatgpt_helper.py  cli.py  config.py  conversation.py  efa_api.py  efa_client.py  fahrplan_api.py  formatter.py  llm_formatter.py  llm_parser.py  logging_utils.py  main.py  mcp_server.py  nlp_parser.py  parser.py  request_logger.py  server.py  services.py  summaries.py  telegram_bot.py  web_service.py
systemd/: suedtirolmobil-bot.service  suedtirolmobil.service
tests/: conftest.py  test_ai_agent.py  test_chatgpt_helper.py  test_cli.py  test_conversation.py  test_departure_monitor.py  test_efa_api.py  test_error_mapping.py  test_formatter.py  test_last_connection.py  test_llm_parser.py  test_main.py  test_nlp_parser.py  test_normalize_datetime.py  test_parser.py  test_session_dialog.py  test_stop_finder.py  (+2 more)
(+18 files in other folders)
