[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suedtirolmobilai"
version = "0.1.0"
description = "Utilities for normalizing EFA responses for suedtirolmobil.ai"
readme = "README.md"
authors = [{name = "SuedtirolmobilAI Maintainers"}]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--maxfail=1 --disable-warnings"
testpaths = ["tests"]
