[metadata]
name = suedtirolmobilAI
version = 0.1.0
description = FastAPI service for public transport queries in South Tyrol
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src
